# mlops

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: cd.yaml  ci.yaml
_apidoc/: mlops.artifact.html  mlops.dataset.html  mlops.errors.html  mlops.examples.html  mlops.examples.image.classification.html  mlops.examples.image.html  mlops.hashing.html  mlops.html  mlops.model.html  mlops.republication.html  modules.html
_sources/: index.rst.txt
_sources/_apidoc/: mlops.artifact.rst.txt  mlops.dataset.rst.txt  mlops.errors.rst.txt  mlops.examples.image.classification.rst.txt  mlops.examples.image.rst.txt  mlops.examples.rst.txt  mlops.hashing.rst.txt  mlops.model.rst.txt  mlops.republication.rst.txt  mlops.rst.txt  modules.rst.txt
_static/: documentation_options.js
docs/: .gitignore  conf.py  index.rst
mlops/: __init__.py
mlops/architecture/: __init__.py
mlops/artifact/: __init__.py  versioned_artifact.py  versioned_artifact_builder.py
mlops/dataset/: DataProcessor.py  Dataset.py  DatasetBuilder.py  InvertibleDataProcessor.py  RawDataset.py  VersionedDataset.py  VersionedDatasetBuilder.py  VersionedDatasetPackage.py  __init__.py  data_processor.py  invertible_data_processor.py  pathless_data_processor.py  pathless_versioned_dataset_builder.py  versioned_dataset.py  versioned_dataset_builder.py
mlops/errors/: __init__.py
tests/: conftest.py
(+77 files in other folders)
