[metadata]
name = mloperations
version = attr: mlops.__version__
author = Leo Kosta
author_email = kostaleonard@gmail.com
description = A framework for conducting MLOps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kostaleonard/mlops
project_urls =
    Bug Tracker = https://github.com/kostaleonard/mlops/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    s3fs
    dill
    tensorflow